--- a/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/Properties/Resource.resx
+++ b/Module-2/FileSystemWatcher/FileSystemWatcher/FileSystemWatcher/Properties/Resource.resx
@@ -117,22 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="From" xml:space="preserve">
-    <value>из</value>
+  <data name="FILE_ADDED" xml:space="preserve">
+    <value>File was added</value>
   </data>
-  <data name="ON_FILE_ADDED" xml:space="preserve">
-    <value>Файл добавлен</value>
+  <data name="FILE_MOVED" xml:space="preserve">
+    <value>File was moved</value>
   </data>
-  <data name="ON_FILE_MOVED" xml:space="preserve">
-    <value>Файл перемещен</value>
+  <data name="FROM" xml:space="preserve">
+    <value>from</value>
   </data>
-  <data name="ON_PATTERN_RESULT_FALSE" xml:space="preserve">
-    <value>Паттерн отработал успешно</value>
+  <data name="HELLO" xml:space="preserve">
+    <value>The folders are listening, to exit click 'Q'</value>
   </data>
-  <data name="ON_PATTERN_RESULT_TRUE" xml:space="preserve">
-    <value>Паттерн отработае неудачно</value>
+  <data name="PATTERN_RESULT_FALSE" xml:space="preserve">
+    <value>On pattern fail</value>
   </data>
-  <data name="To" xml:space="preserve">
-    <value>в</value>
+  <data name="PATTERN_RESULT_TRUE" xml:space="preserve">
+    <value>On pattern success</value>
+  </data>
+  <data name="TO" xml:space="preserve">
+    <value>to</value>
   </data>
 </root>
