--- a/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess/Properties/OrderSqls.resx
+++ b/Module-4/OrderManagementConsoleApp/OrderManagement.DataAccess/Properties/OrderSqls.resx
@@ -119,7 +119,7 @@
   </resheader>
   <data name="DeleteSql" xml:space="preserve">
     <value>DELETE FROM dbo.Orders 
-WHERE OrderId='@id' and (OrderDate is null or ShippedDate is null);</value>
+WHERE OrderId=@id and (OrderDate is null or ShippedDate is null);</value>
   </data>
   <data name="GetByIdSql" xml:space="preserve">
     <value>select  OrderID,CustomerID,EmployeeID,OrderDate,RequiredDate,ShippedDate,ShipVia,Freight,ShipName,ShipAddress,ShipCity, ShipRegion,ShipPostalCode,ShipCountry,case     when OrderDate is null then 0        when ShippedDate is null then 1      else 2                           end as 'Status'                      from dbo.Orders as Orders where OrderId = @id;
@@ -130,27 +130,28 @@ select * from dbo.[Order Details] where OrderID = @id;</value>
   </data>
   <data name="InsertSql" xml:space="preserve">
     <value>insert into dbo.Orders (CustomerID, EmployeeID, RequiredDate, ShipVia, Freight, ShipName, ShipAddress, ShipCity, ShipRegion, ShipPostalCode, ShipCountry)
-values ('@custId', '@emplId', '@reqDate', '@shipVia', '@freight', '@shipName', '@shipAddress', '@shipCity', 'shipRegion', '@shipPostalCode', '@shipCntry')</value>
+values (@custId, @emplId, @reqDate, @shipVia, @freight, @shipName, @shipAddress, @shipCity, @shipRegion, @shipPostalCode, @shipCntry);
+select convert(int, IDENT_CURRENT('Orders'));</value>
   </data>
   <data name="MarkAsDone" xml:space="preserve">
-    <value>update [dbo].[Orders] set ShippedDate='@dateTime' where OrderId='@id' and ShippedDate is null;</value>
+    <value>update [dbo].[Orders] set ShippedDate=@dateTime where OrderId=@id and ShippedDate is null;</value>
   </data>
   <data name="MoveToProgress" xml:space="preserve">
-    <value>update [dbo].[Orders] set OrderDate='@dateTime' where OrderId='@id' and OrderDate is null;</value>
+    <value>update [dbo].[Orders] set OrderDate=@dateTime where OrderId=@id and OrderDate is null;</value>
   </data>
   <data name="UpdateSql" xml:space="preserve">
     <value>UPDATE [dbo].[Orders]
-   SET [CustomerID] = '@custId'
-      ,[EmployeeID] = '@emplId'
-      ,[RequiredDate] = '@reqDate'
-      ,[ShipVia] = '@shipVia'
-      ,[Freight] = '@freight'
-      ,[ShipName] = '@shipName'
-      ,[ShipAddress] = '@shipAddress'
-      ,[ShipCity] = '@shipCity'
-      ,[ShipRegion] = '@shipRegion'
-      ,[ShipPostalCode] = '@shipPostalCode'
-      ,[ShipCountry] = '@shipCntry'
-WHERE OrderId='@orderId'</value>
+   SET [CustomerID] = @custId
+      ,[EmployeeID] = @emplId
+      ,[RequiredDate] = @reqDate
+      ,[ShipVia] = @shipVia
+      ,[Freight] = @freight
+      ,[ShipName] = @shipName
+      ,[ShipAddress] = @shipAddress
+      ,[ShipCity] = @shipCity
+      ,[ShipRegion] = @shipRegion
+      ,[ShipPostalCode] = @shipPostalCode
+      ,[ShipCountry] = @shipCntry
+WHERE OrderId=@orderId</value>
   </data>
 </root>
